# Kitokei_Demo

./: CMakeLists.txt  CMakeSettings.json  Kitokeri_Demo.service  audio.sdp  configuration.ini
source/: CMakeLists.txt  Main.cpp
source/Applications/: AppInstance.cpp  AppInstance.hpp  ClientReceiver.cpp  ClientReceiver.hpp
source/Configurations/: Configurations.hpp  ParseConfigFile.cpp  ParseConfigFile.hpp
source/common/: CodeConverter.cpp  CodeConverter.hpp  CommonFunction.cpp  CommonFunction.hpp  G711Codec.cpp  G711Codec.hpp
source/logger/include/logger/: LoggerImpl.hpp
source/socket/: CMakeLists.txt
source/socket/include/socket/: ClientSocket.hpp  ConcreteRTPSession.hpp  IDataListener.hpp  IRTPSession.hpp
source/socket/src/: ClientSocket.cpp  ConcreteRTPSession.cpp  SocketSysCall.cpp
source/timer/: CMakeLists.txt
source/timer/include/timer/: DefaultTimerService.hpp  TimerService.hpp
source/timer/src/: DefaultTimerService.cpp  IOService.cpp
source/usbAudio/: CMakeLists.txt
source/usbAudio/include/usbAudio/: AudioPlaybackService.hpp  AudioRecordService.hpp  IAudioPlaybackService.hpp  IAudioRecordService.hpp  ISysAlsa.hpp  ISysRec.hpp  LinuxAlsa.hpp  LinuxRec.hpp
source/usbAudio/src/: AudioPlaybackService.cpp  AudioRecordService.cpp  LinuxAlsa.cpp  LinuxRec.cpp
source/usbVideo/: CMakeLists.txt
source/usbVideo/include/usbVideo/: AudioService.hpp  CameraControl.hpp  CameraImage.hpp  CameraProcess.hpp  CameraService.hpp  EncodeCameraStream.hpp  ICameraControl.hpp  IDecodeCameraStream.hpp  IEncodeCameraStream.hpp  IVideoManagement.hpp  StreamProcess.hpp  VideoManagement.hpp
source/usbVideo/src/: AudioService.cpp  CameraControl.cpp  CameraImage.cpp  CameraProcess.cpp  CameraService.cpp  EncodeCameraStream.cpp  StreamProcess.cpp  VideoManagement.cpp
